(2/17/12) - v9.0.7 - refactor
- Changed: More code is put into ShopHelpers, cleans up the listener and some shop stuff
- Fixed: Access to double chests is now covered by PhysicalShop
(2/17/12) - v9.0.6 - bugfix
- Fixed: No longer create a chest next to a chest that is part of a shop of which you aren't owner
(2/15/12) - v9.0.5 - bugfix
- Fixed: Custom event for shop creation should no longer be thrown if event cancelled
(2/15/12) - v9.0.4 - fixed reload config
- Fixed: Enabling name service when reloading config
- Added: Custom event for when a sign is created
- Added: Custom event for when a shop is created
(2/15/12) - v9.0.3 - more break fixes
- Fixed: fixed all the events that should be able to destroy a shop
(2/15/12) - v9.0.2 - fix from AgentME
- Fixed: Enderman can no longer break shops if shop protection is active
- Fixed: Pistons can no longer break shops if shop protection is active
(2/14/12) - v9.0.1 - fix default config
- Fixed: Now saves a default config
- Changed: Will not load if exception or error is thrown in onEnable()
(2/7/12) - v9.0.0 - major refactor
- Changed default sign format to be much more lenient 
- Changed API to be a bit more sane
- Added color support in messages
(1/29/12) - v8.4.2 - new events
- Fixed events to work with new annotations
- Changed redstone hook for CraftBukkit (fixes redstone issue)
(1/21/12) - v8.4.2a - code revision
- Added URL to plugin.yml
- Made a bit of code for logblock look better
- Added missing @Override
(12/30/11) - v8.4.1 - bugfix
- Fixed: NameCollection.yml clearing entries with only 1 player on server restart
(12/28/11) - v8.4.0 - feature build
- Added extended name service
- Fixed: Fresh installations should work now
(12/27/11) - v8.3.3 - bugfix build
- Fixed: Alias and names acted strangely
(12/23/11) - v8.3.2r2 - re export with Locale
(12/23/11) - v8.3.2 - new logblock hook
- Fixed: newest version of LogBlock
(12/21/11) - v8.3.1 - URGENT bugfix
- Fixed: Enchantments being removed during transactions