@@ -5,15 +5,18 @@ package com.wolvereness.physicalshop;
  */
 public class Rate {
 	private final int amount;
+	private final ShopMaterial material;
 	private final int price;
 	/**
 	 * Creates a Rate to represent amount of material and price measured in currency.
-	 * @param amount
-	 * @param price
+	 * @param amount The amount of material for this rate
+	 * @param price The amount of currency for this rate
+	 * @param material The material for this rate
 	 */
-	Rate(final int amount, final int price) {
+	public Rate(final int amount, final int price, final ShopMaterial material) {
 		this.amount = amount;
 		this.price = price;
+		this.material = material;
 	}
 	/**
 	 * Returns the amount of shop material associated with this Rate.
@@ -31,6 +34,12 @@ public class Rate {
 		return price != 0 ? currency / price * amount : 0;
 	}
 	/**
+	 * @return The material for this rate
+	 */
+	public ShopMaterial getMaterial() {
+		return material;
+	}
+	/**
 	 * Returns the price from the currency associated with this Rate.
 	 * @return the price
 	 */
@@ -45,5 +54,4 @@ public class Rate {
 	public int getPrice(final int items) {
 		return amount != 0 ? items / amount * price : 0;
 	}
-
 }
