@@ -1,4 +1,15 @@
-buy-pattern: '^\D+(?=\d)|(?<=\d)\D+(?=\d)|(?=\D$)'
+buy:
+  mode: SPLIT
+  pattern: '^\D+(?=\d)|(?<=\d)\D+(?=\d)|(?<=\d)\D*(?=\D$)'
+  amount-index: 1
+  price-index: 2
+  currency-index: 3
+sell:
+  mode: SPLIT
+  pattern: '^\D+(?=\d)|(?<=\d)\D+(?=\d)|(?<=\d)\D*(?=\D$)'
+  amount-index: 1
+  price-index: 2
+  currency-index: 3
 protect-explode: true
 material-pattern: \[(.+)\]
 auto-fill-name: true
@@ -6,7 +17,6 @@ server-shop: '[Server]'
 protect-chest-access: true
 protect-break: true
 log-block: false
-sell-pattern: '^\D+(?=\d)|(?<=\d)\D+(?=\d)|(?=\D$)'
 language: English
 protect-existing-chest: true
 trigger-redstone: false
