@@ -1,6 +1,9 @@
+(2/18/12) - v9.0.8 - feature
+- Added: Better configuration for shop buy / sell matching
 (2/17/12) - v9.0.7 - refactor
 - Changed: More code is put into ShopHelpers, cleans up the listener and some shop stuff
 - Fixed: Access to double chests is now covered by PhysicalShop
+- Added: Better name recognition and output for Monster Eggs (silverfish blocks) and Smooth Brick
 (2/17/12) - v9.0.6 - bugfix
 - Fixed: No longer create a chest next to a chest that is part of a shop of which you aren't owner
 (2/15/12) - v9.0.5 - bugfix
